Se mejoro el modelo de IA
